--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,144 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+<body class="p-2">
+    <header class="text-center border-2 border-green-400 rounded-md">
+        <h1 class="text-2xl font-bold text-green-400">Lista de productos</h1>
+        <div>
+            <h2>Marcos Silva G.</h2>
+            <h2>19741569K</h2>
+            <h2>Introducción al desarrollo WEB/Movíl</h2>
+            <h2>25/10/2023</h2>
+        </div>
+    </header>
+
+    <div class="p-2 grid grid-cols-1 justify-center items-center border-2 gap-2 md:grid-cols-2 lg:grid-cols-3">
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/410152-360-360.jfif" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">COMINO MOLIDO</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Castaña-de-caju-100-g.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">CASTAÑAS DE CAJU</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Ciboulette-en-sobre-2-g-1-160576820.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">CIBOULETTE</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Endulzante-sachet-stevia-100-un-1-159597551.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">ENDULZANTE STEVIA</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Mix-italiano-Jumbo-pote-150-g-1-57509692.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">MIX ITALIANO</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Nuez-cuarto-700-g-1-150161164.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">NUEZ</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Papa-malla-2-kg.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">MALLA DE PAPAS 2KG</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Principal-10011.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">BANDEJA DE 30 HUEVOS CINTAZUL</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Principal-1241.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">ÑOQUIS DE ESPINACA</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+        <div class="border-2 flex flex-col items-center border-blue-200">
+            <img class="w-24 md:w-32 lg:w-48" src="../images/Principal-35666.jpg" alt="">
+            <div class="p-2">
+                <h2 class="text-green-400 font-bold">SODA CÁUSTICA</h2>
+                <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">$1500</span>
+                <div class="p-2">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
+                </div>
+            </div>
+            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+        </div>
+
+
+
+
+
+
+
+
+
+
+    </div>
 </body>
 </html>
