Estilo boton mejorado

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim consequuntur praesentium placeat pariatur fugit et repellendus architecto eveniet obcaecati.</h3>
                 </div>
             </div>
-            <button class="border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
+            <button class="p-2 border-2 rounded-md border-green-950 bg-green-400 mb-1">Mas detalles</button>
         </div>
         <div class="border-2 flex flex-col items-center border-blue-200">
             <img class="w-24 md:w-32 lg:w-48" src="../images/Castaña-de-caju-100-g.jpg" alt="">
